--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,36 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="73c1fb">  <td>23/04/25 15:06:01</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.BT()[pri:0, instance:Amazon.ProductSearchAndAddToCat@7fee8714]">&gt;&gt;BT</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1375606017</td>   <td></td> </tr>
-<tr bgcolor="73c1fb">  <td>23/04/25 15:06:53</td>   <td>51955</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.AC()[pri:0, instance:Amazon.ProductSearchAndAddToCat@7fee8714]">&lt;&lt;AC</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1375606017</td>   <td></td> </tr>
-<tr bgcolor="73c1fb">  <td>23/04/25 15:06:03</td>   <td>1748</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.BM()[pri:0, instance:Amazon.ProductSearchAndAddToCat@7fee8714]">&gt;&gt;BM</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1375606017</td>   <td></td> </tr>
-<tr bgcolor="92be74">  <td>23/04/25 15:06:20</td>   <td>19215</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductSearchAndAddToCat.AddToCart()[pri:0, instance:Amazon.ProductSearchAndAddToCat@7fee8714]">AddToCart</td> 
-  <td>TestNG-tests-1@1375606017</td>   <td></td> </tr>
-<tr bgcolor="73c1fb">  <td>23/04/25 15:06:01</td>   <td>27</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.BC(java.lang.String)[pri:0, instance:Amazon.ProductSearchAndAddToCat@7fee8714]">&gt;&gt;BC</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1375606017</td>   <td></td> </tr>
-<tr bgcolor="73c1fb">  <td>23/04/25 15:06:53</td>   <td>51955</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.AM()[pri:0, instance:Amazon.ProductSearchAndAddToCat@7fee8714]">&lt;&lt;AM</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1375606017</td>   <td></td> </tr>
-<tr bgcolor="73c1fb">  <td>23/04/25 15:06:53</td>   <td>51959</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.AT()[pri:0, instance:Amazon.ProductSearchAndAddToCat@7fee8714]">&lt;&lt;AT</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1375606017</td>   <td></td> </tr>
-<tr bgcolor="73c1fb">  <td>23/04/25 15:06:01</td>   <td>-11</td> <td title="&gt;&gt;BaseClass.BS()[pri:0, instance:Amazon.ProductSearchAndAddToCat@6e0f5f7f]">&gt;&gt;BS</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1403700359</td>   <td></td> </tr>
-<tr bgcolor="73c1fb">  <td>23/04/25 15:06:49</td>   <td>48117</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.AT()[pri:0, instance:Amazon.ProductSearchAndAddToCat@6e0f5f7f]">&lt;&lt;AT</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@177229503</td>   <td></td> </tr>
-<tr bgcolor="73c1fb">  <td>23/04/25 15:06:49</td>   <td>48114</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.AM()[pri:0, instance:Amazon.ProductSearchAndAddToCat@6e0f5f7f]">&lt;&lt;AM</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-2@177229503</td>   <td></td> </tr>
-<tr bgcolor="73c1fb">  <td>23/04/25 15:06:53</td>   <td>51966</td> <td title="&lt;&lt;BaseClass.AS()[pri:0, instance:Amazon.ProductSearchAndAddToCat@6e0f5f7f]">&lt;&lt;AS</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1403700359</td>   <td></td> </tr>
-<tr bgcolor="73c1fb">  <td>23/04/25 15:06:01</td>   <td>1</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.BT()[pri:0, instance:Amazon.ProductSearchAndAddToCat@6e0f5f7f]">&gt;&gt;BT</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@177229503</td>   <td></td> </tr>
-<tr bgcolor="92be74">  <td>23/04/25 15:06:18</td>   <td>16982</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductSearchAndAddToCat.AddToCart()[pri:0, instance:Amazon.ProductSearchAndAddToCat@6e0f5f7f]">AddToCart</td> 
-  <td>TestNG-tests-2@177229503</td>   <td></td> </tr>
-<tr bgcolor="73c1fb">  <td>23/04/25 15:06:07</td>   <td>6012</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.BM()[pri:0, instance:Amazon.ProductSearchAndAddToCat@6e0f5f7f]">&gt;&gt;BM</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-2@177229503</td>   <td></td> </tr>
-<tr bgcolor="73c1fb">  <td>23/04/25 15:06:01</td>   <td>27</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.BC(java.lang.String)[pri:0, instance:Amazon.ProductSearchAndAddToCat@6e0f5f7f]">&gt;&gt;BC</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@177229503</td>   <td></td> </tr>
-<tr bgcolor="73c1fb">  <td>23/04/25 15:06:49</td>   <td>48116</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.AC()[pri:0, instance:Amazon.ProductSearchAndAddToCat@6e0f5f7f]">&lt;&lt;AC</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@177229503</td>   <td></td> </tr>
+<tr bgcolor="a7bfbc">  <td>23/07/01 10:03:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddMultipleProductsToCartandValidateTest.addMultipleProductsToCartandValidateTest()[pri:0, instance:Amazon.AddMultipleProductsToCartandValidateTest@4b45a2f5]">addMultipleProductsToCartandValidateTest</td> 
+  <td>TestNG-tests-1@685558284</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/07/01 10:08:48</td>   <td>333579</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.AM()[pri:0, instance:Amazon.AddMultipleProductsToCartandValidateTest@4b45a2f5]">&lt;&lt;AM</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@685558284</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/07/01 10:08:48</td>   <td>333581</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.AC()[pri:0, instance:Amazon.AddMultipleProductsToCartandValidateTest@4b45a2f5]">&lt;&lt;AC</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@685558284</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/07/01 10:02:28</td>   <td>-46013</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.BC(java.lang.String)[pri:0, instance:Amazon.AddMultipleProductsToCartandValidateTest@4b45a2f5]">&gt;&gt;BC</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@685558284</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/07/01 10:03:13</td>   <td>-1415</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.BM()[pri:0, instance:Amazon.AddMultipleProductsToCartandValidateTest@4b45a2f5]">&gt;&gt;BM</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@685558284</td>   <td></td> </tr>
+<tr bgcolor="a7bfbc">  <td>23/07/01 10:02:33</td>   <td>-40951</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddMultipleProductsToCartandValidateTest.addMultipleProductsToCartandValidateTest()[pri:0, instance:Amazon.AddMultipleProductsToCartandValidateTest@248e319b]">addMultipleProductsToCartandValidateTest</td> 
+  <td>TestNG-tests-2@79782883</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/07/01 10:02:47</td>   <td>-26914</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.AC()[pri:0, instance:Amazon.AddMultipleProductsToCartandValidateTest@248e319b]">&lt;&lt;AC</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@79782883</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/07/01 10:02:28</td>   <td>-46026</td> <td title="&gt;&gt;BaseClass.BS()[pri:0, instance:Amazon.AddMultipleProductsToCartandValidateTest@248e319b]">&gt;&gt;BS</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@384515747</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/07/01 10:02:28</td>   <td>-46013</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.BC(java.lang.String)[pri:0, instance:Amazon.AddMultipleProductsToCartandValidateTest@248e319b]">&gt;&gt;BC</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@79782883</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/07/01 10:02:47</td>   <td>-26915</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.AM()[pri:0, instance:Amazon.AddMultipleProductsToCartandValidateTest@248e319b]">&lt;&lt;AM</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@79782883</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/07/01 10:08:48</td>   <td>333617</td> <td title="&lt;&lt;BaseClass.AS()[pri:0, instance:Amazon.AddMultipleProductsToCartandValidateTest@248e319b]">&lt;&lt;AS</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@384515747</td>   <td></td> </tr>
+<tr bgcolor="708794">  <td>23/07/01 10:02:32</td>   <td>-42533</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.BM()[pri:0, instance:Amazon.AddMultipleProductsToCartandValidateTest@248e319b]">&gt;&gt;BM</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@79782883</td>   <td></td> </tr>
 </table>
