--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -4,22 +4,18 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>Amazon.ProductSearchAndAddToCat</td>
+<td>Amazon.AddMultipleProductsToCartandValidateTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>AddToCart</td>
+<td>addMultipleProductsToCartandValidateTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>BC</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
